Bug 1943517 - Fix window transparency in some configurations. r=cmartin,win-reviewers

Differential Revision: https://phabricator.services.mozilla.com/D236286