gfx/webrender_bindings/RenderCompositorANGLE.cpp
@@ -194,24 +194,8 @@ HWND RenderCompositorANGLE::GetCompositorHwnd() {
   return hwnd;
 }
 
-bool RenderCompositorANGLE::CreateSwapChain(nsACString& aError) {
-  MOZ_ASSERT(!UseCompositor());
-
-  mFirstPresent = true;
-  HWND hwnd = mWidget->AsWindows()->GetHwnd();
-
-  RefPtr<IDXGIDevice> dxgiDevice;
-  mDevice->QueryInterface((IDXGIDevice**)getter_AddRefs(dxgiDevice));
-
-  RefPtr<IDXGIFactory> dxgiFactory;
-  {
-    RefPtr<IDXGIAdapter> adapter;
-    dxgiDevice->GetAdapter(getter_AddRefs(adapter));
-
-    adapter->GetParent(
-        IID_PPV_ARGS((IDXGIFactory**)getter_AddRefs(dxgiFactory)));
-  }
-
+bool RenderCompositorANGLE::CreateSwapChainForHWND() {
+  RefPtr<IDXGIFactory> dxgiFactory = DXGIFactory();
   RefPtr<IDXGIFactory2> dxgiFactory2;
   HRESULT hr = dxgiFactory->QueryInterface(
       (IDXGIFactory2**)getter_AddRefs(dxgiFactory2));
@@ -219,15 +203,9 @@ bool RenderCompositorANGLE::CreateSwapChain(nsACString& aError) {
     dxgiFactory2 = nullptr;
   }
 
-  CreateSwapChainForDCompIfPossible(dxgiFactory2);
-  if (gfx::gfxVars::UseWebRenderDCompWin() && !mSwapChain) {
-    MOZ_ASSERT(GetCompositorHwnd());
-    aError.Assign("RcANGLE(create swapchain for dcomp failed)"_ns);
-    return false;
-  }
-
+  HWND hwnd = mWidget->AsWindows()->GetHwnd();
   const bool alpha = ShouldUseAlpha();
-  if (!mSwapChain && dxgiFactory2) {
+  if (dxgiFactory2) {
     RefPtr<IDXGISwapChain1> swapChain1;
     bool useTripleBuffering = false;
 
@@ -271,63 +249,81 @@ bool RenderCompositorANGLE::CreateSwapChain(nsACString& aError) {
       mSwapChain1 = swapChain1;
       mUseTripleBuffering = useTripleBuffering;
       mSwapChainUsingAlpha = alpha;
-    } else if (useFlipSequential) {
+      return true;
+    }
+    if (useFlipSequential) {
       gfxCriticalNoteOnce << "FLIP_SEQUENTIAL is not supported. Fallback";
     }
   }
 
-  if (!mSwapChain) {
-    if (mWidget->AsWindows()->GetCompositorHwnd()) {
-      // Destroy compositor window.
-      mWidget->AsWindows()->DestroyCompositorWindow();
-      hwnd = mWidget->AsWindows()->GetHwnd();
-    }
+  if (mWidget->AsWindows()->GetCompositorHwnd()) {
+    // Destroy compositor window.
+    mWidget->AsWindows()->DestroyCompositorWindow();
+    hwnd = mWidget->AsWindows()->GetHwnd();
+  }
 
-    DXGI_SWAP_CHAIN_DESC swapDesc{};
-    swapDesc.BufferDesc.Width = 0;
-    swapDesc.BufferDesc.Height = 0;
-    swapDesc.BufferDesc.Format = DXGI_FORMAT_B8G8R8A8_UNORM;
-    swapDesc.BufferDesc.RefreshRate.Numerator = 60;
-    swapDesc.BufferDesc.RefreshRate.Denominator = 1;
-    swapDesc.SampleDesc.Count = 1;
-    swapDesc.SampleDesc.Quality = 0;
-    swapDesc.BufferUsage = DXGI_USAGE_RENDER_TARGET_OUTPUT;
-    swapDesc.BufferCount = 1;
-    swapDesc.OutputWindow = hwnd;
-    swapDesc.Windowed = TRUE;
-    swapDesc.Flags = 0;
-    swapDesc.SwapEffect = DXGI_SWAP_EFFECT_SEQUENTIAL;
+  DXGI_SWAP_CHAIN_DESC swapDesc{};
+  swapDesc.BufferDesc.Width = 0;
+  swapDesc.BufferDesc.Height = 0;
+  swapDesc.BufferDesc.Format = DXGI_FORMAT_B8G8R8A8_UNORM;
+  swapDesc.BufferDesc.RefreshRate.Numerator = 60;
+  swapDesc.BufferDesc.RefreshRate.Denominator = 1;
+  swapDesc.SampleDesc.Count = 1;
+  swapDesc.SampleDesc.Quality = 0;
+  swapDesc.BufferUsage = DXGI_USAGE_RENDER_TARGET_OUTPUT;
+  swapDesc.BufferCount = 1;
+  swapDesc.OutputWindow = hwnd;
+  swapDesc.Windowed = TRUE;
+  swapDesc.Flags = 0;
+  swapDesc.SwapEffect = DXGI_SWAP_EFFECT_SEQUENTIAL;
 
-    HRESULT hr = dxgiFactory->CreateSwapChain(dxgiDevice, &swapDesc,
-                                              getter_AddRefs(mSwapChain));
-    if (FAILED(hr)) {
-      aError.Assign(
-          nsPrintfCString("RcANGLE(swap chain create failed %lx)", hr));
-      return false;
-    }
+  hr = dxgiFactory->CreateSwapChain(DXGIDevice().get(), &swapDesc,
+                                    getter_AddRefs(mSwapChain));
+  if (FAILED(hr)) {
+    return false;
+  }
 
-    RefPtr<IDXGISwapChain1> swapChain1;
-    hr = mSwapChain->QueryInterface(
-        (IDXGISwapChain1**)getter_AddRefs(swapChain1));
-    if (SUCCEEDED(hr)) {
-      mSwapChain1 = std::move(swapChain1);
-    }
+  RefPtr<IDXGISwapChain1> swapChain1;
+  hr =
+      mSwapChain->QueryInterface((IDXGISwapChain1**)getter_AddRefs(swapChain1));
+  if (SUCCEEDED(hr)) {
+    mSwapChain1 = std::move(swapChain1);
+  } else {
+    mSwapChain1 = nullptr;
+  }
+  mSwapChainUsingAlpha = alpha;
+  return true;
+}
+
+bool RenderCompositorANGLE::CreateSwapChain(nsACString& aError) {
+  MOZ_ASSERT(!UseCompositor());
+
+  mFirstPresent = true;
+  CreateSwapChainForDCompIfPossible();
+  if (gfx::gfxVars::UseWebRenderDCompWin() && !mSwapChain) {
+    MOZ_ASSERT(GetCompositorHwnd());
+    aError.Assign("RcANGLE(create swapchain for dcomp failed)"_ns);
+    return false;
+  }
+
+  if (!mSwapChain && !CreateSwapChainForHWND()) {
+    aError.Assign("RcANGLE(swap chain create failed)"_ns);
+    return false;
   }
 
   // We need this because we don't want DXGI to respond to Alt+Enter.
-  dxgiFactory->MakeWindowAssociation(hwnd, DXGI_MWA_NO_WINDOW_CHANGES);
+  HWND hwnd = mWidget->AsWindows()->GetHwnd();
+  DXGIFactory()->MakeWindowAssociation(hwnd, DXGI_MWA_NO_WINDOW_CHANGES);
 
   if (!ResizeBufferIfNeeded()) {
     aError.Assign("RcANGLE(resize buffer failed)"_ns);
     return false;
   }
-
   return true;
 }
 
-void RenderCompositorANGLE::CreateSwapChainForDCompIfPossible(
-    IDXGIFactory2* aDXGIFactory2) {
-  if (!aDXGIFactory2 || !mDCLayerTree) {
+void RenderCompositorANGLE::CreateSwapChainForDCompIfPossible() {
+  if (!mDCLayerTree) {
     return;
   }
 
@@ -354,28 +350,35 @@ void RenderCompositorANGLE::CreateSwapChainForDCompIfPossible(
     mUseTripleBuffering = useTripleBuffering;
     mDCLayerTree->SetDefaultSwapChain(swapChain1);
   } else {
-    // Clear CLayerTree on falire
+    // Clear DCLayerTree on falire
     mDCLayerTree = nullptr;
   }
 }
 
+RefPtr<IDXGIDevice> RenderCompositorANGLE::DXGIDevice() {
+  RefPtr<IDXGIDevice> dxgiDevice;
+  mDevice->QueryInterface((IDXGIDevice**)getter_AddRefs(dxgiDevice));
+  return dxgiDevice;
+}
+
+RefPtr<IDXGIFactory> RenderCompositorANGLE::DXGIFactory() {
+  RefPtr<IDXGIAdapter> adapter;
+  DXGIDevice()->GetAdapter(getter_AddRefs(adapter));
+
+  RefPtr<IDXGIFactory> dxgiFactory;
+  adapter->GetParent(IID_PPV_ARGS((IDXGIFactory**)getter_AddRefs(dxgiFactory)));
+  return dxgiFactory;
+}
+
 RefPtr<IDXGISwapChain1> RenderCompositorANGLE::CreateSwapChainForDComp(
     bool aUseTripleBuffering) {
-  HRESULT hr;
   RefPtr<IDXGIDevice> dxgiDevice;
   mDevice->QueryInterface((IDXGIDevice**)getter_AddRefs(dxgiDevice));
 
-  RefPtr<IDXGIFactory> dxgiFactory;
-  {
-    RefPtr<IDXGIAdapter> adapter;
-    dxgiDevice->GetAdapter(getter_AddRefs(adapter));
-
-    adapter->GetParent(
-        IID_PPV_ARGS((IDXGIFactory**)getter_AddRefs(dxgiFactory)));
-  }
+  RefPtr<IDXGIFactory> dxgiFactory = DXGIFactory();
 
   RefPtr<IDXGIFactory2> dxgiFactory2;
-  hr = dxgiFactory->QueryInterface(
+  HRESULT hr = dxgiFactory->QueryInterface(
       (IDXGIFactory2**)getter_AddRefs(dxgiFactory2));
   if (FAILED(hr)) {
     return nullptr;
@@ -426,10 +429,11 @@ bool RenderCompositorANGLE::BeginFrame() {
   mWidget->AsWindows()->UpdateCompositorWndSizeIfNecessary();
 
   if (!UseCompositor()) {
-    if (!mSwapChainUsingAlpha && ShouldUseAlpha()) {
-      if (!RecreateNonNativeCompositorSwapChain()) {
+    if (NS_WARN_IF(!mSwapChainUsingAlpha && ShouldUseAlpha())) {
+      if (NS_WARN_IF(!RecreateNonNativeCompositorSwapChain())) {
         return false;
       }
+      MOZ_ASSERT(mSwapChainUsingAlpha);
     }
     if (!ResizeBufferIfNeeded()) {
       return false;
@@ -931,15 +935,19 @@ bool RenderCompositorANGLE::RecreateNonNativeCompositorSwapChain() {
   DestroyEGLSurface();
   mBufferSize.reset();
 
-  RefPtr<IDXGISwapChain1> swapChain1 =
-      CreateSwapChainForDComp(mUseTripleBuffering);
-  if (!swapChain1) {
-    return false;
-  }
-  mSwapChain = swapChain1;
-  mSwapChain1 = swapChain1;
   if (mDCLayerTree) {
+    RefPtr<IDXGISwapChain1> swapChain1 =
+        CreateSwapChainForDComp(mUseTripleBuffering);
+    if (!swapChain1) {
+      return false;
+    }
+    mSwapChain = swapChain1;
+    mSwapChain1 = swapChain1;
     mDCLayerTree->SetDefaultSwapChain(swapChain1);
+  } else {
+    if (NS_WARN_IF(!CreateSwapChainForHWND())) {
+      return false;
+    }
   }
   return ResizeBufferIfNeeded();
 }
