gfx/webrender_bindings/RenderCompositorANGLE.h
@@ -14,6 +14,8 @@
 #include "mozilla/webrender/RenderCompositor.h"
 #include "mozilla/webrender/RenderThread.h"
 
+struct IDXGIDevice;
+struct IDXGIFactory;
 struct ID3D11DeviceContext;
 struct ID3D11Device;
 struct ID3D11Query;
@@ -127,12 +129,16 @@ class RenderCompositorANGLE final : public RenderCompositor {
   void DestroyEGLSurface();
   ID3D11Device* GetDeviceOfEGLDisplay(nsACString& aError);
   bool CreateSwapChain(nsACString& aError);
-  void CreateSwapChainForDCompIfPossible(IDXGIFactory2* aDXGIFactory2);
+  void CreateSwapChainForDCompIfPossible();
+  bool CreateSwapChainForHWND();
   RefPtr<IDXGISwapChain1> CreateSwapChainForDComp(bool aUseTripleBuffering);
   RefPtr<ID3D11Query> GetD3D11Query();
   void ReleaseNativeCompositorResources();
   HWND GetCompositorHwnd();
   bool ShouldUseAlpha() const;
+
+  RefPtr<IDXGIDevice> DXGIDevice();
+  RefPtr<IDXGIFactory> DXGIFactory();
 
   RefPtr<gl::GLContext> mGL;
 
